--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "autoprefixer": "10.3.4",
     "axios": "0.21.4",
+    "classnames": "^2.3.1",
     "core-js": "3.17.3",
     "react": "17.0.2",
     "react-app-polyfill": "2.0.0",
