--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack --mode development",
-    "prod": "cross-env NODE_ENV=production webpack --mode production",
+    "build": "cross-env NODE_ENV=production webpack --mode production",
     "watch": "cross-env NODE_ENV=development webpack --mode production --watch",
     "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --open",
     "start:no-window": "cross-env NODE_ENV=development webpack-dev-server --mode development"
@@ -26,18 +26,6 @@
     "react-refresh": "0.10.0",
     "react-router-dom": "5.3.0",
     "remove-files-webpack-plugin": "1.4.5"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   },
   "devDependencies": {
     "@babel/core": "7.15.5",
@@ -70,7 +58,9 @@
     "mini-css-extract-plugin": "2.3.0",
     "node-sass": "6.0.1",
     "postcss": "8.3.6",
+    "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "6.1.1",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "2.4.0",
     "sass-loader": "12.1.0",
     "style-loader": "3.2.1",
