--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,12 @@
         "endOfLine": "auto"
       }
     ],
+    "jsx-a11y/no-static-element-interactions": [0],
+    "jsx-a11y/no-noninteractive-element-interactions": [0],
+    "jsx-a11y/click-events-have-key-events": [0],
+    "import/no-unresolved": [0],
+    "react/jsx-props-no-spreading": [1],
+    "no-console": [1],
     "react/prop-types": [0],
     "react/destructuring-assignment": [0, "always"],
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
