--- a/.eslintrc
+++ b/.eslintrc
@@ -26,6 +26,7 @@
     "import/no-unresolved": [0],
     "react/jsx-props-no-spreading": [1],
     "no-console": [1],
+    "react/no-array-index-key": [1],
     "react/prop-types": [0],
     "react/destructuring-assignment": [0, "always"],
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
