--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "cross-env NODE_ENV=development webpack --mode development",
     "build": "cross-env NODE_ENV=production webpack --mode production",
     "watch": "cross-env NODE_ENV=development webpack --mode production --watch",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --open",
-    "start:no-window": "cross-env NODE_ENV=development webpack-dev-server --mode development"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --mode development",
+    "start:window": "cross-env NODE_ENV=development webpack-dev-server --mode development --open"
   },
   "keywords": [],
   "author": "",
