--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "axios": "0.21.4",
     "classnames": "^2.3.1",
     "core-js": "3.17.3",
+    "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-app-polyfill": "2.0.0",
     "react-content-loader": "6.0.3",
     "react-dev-utils": "11.0.4",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.5",
     "react-refresh": "0.10.0",
     "react-router-dom": "5.3.0",
+    "redux": "^4.1.1",
     "remove-files-webpack-plugin": "1.4.5"
   },
   "devDependencies": {
