--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "cross-env NODE_ENV=production webpack --mode production",
     "watch": "cross-env NODE_ENV=development webpack --mode production --watch",
     "start": "cross-env NODE_ENV=development webpack-dev-server --mode development",
-    "start:window": "cross-env NODE_ENV=development webpack-dev-server --mode development --open"
+    "start:window": "cross-env NODE_ENV=development webpack-dev-server --mode development --open",
+    "json": "json-server --watch public/db.json --port 1488"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +29,7 @@
     "react-refresh": "0.10.0",
     "react-router-dom": "5.3.0",
     "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "remove-files-webpack-plugin": "1.4.5"
   },
   "devDependencies": {
