--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-app-polyfill": "2.0.0",
-    "react-content-loader": "6.0.3",
+    "react-content-loader": "^6.0.3",
     "react-dev-utils": "11.0.4",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.5",
