delete plugin @pmmmwh/react-refresh-webpack-plugin, add new scripts for linting

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "watch": "cross-env NODE_ENV=development webpack --mode production --watch",
     "start": "cross-env NODE_ENV=development webpack-dev-server --mode development",
     "start:window": "cross-env NODE_ENV=development webpack-dev-server --mode development --open",
-    "json": "json-server --watch public/db.json --port 1488"
+    "json": "json-server --watch public/db.json --port 1338",
+    "lint:styles": "npx stylelint --fix 'src/styles/**/*.scss'",
+    "lint:all": "prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -18,9 +20,9 @@
     "autoprefixer": "10.3.4",
     "axios": "0.21.4",
     "classnames": "^2.3.1",
-    "core-js": "3.17.3",
+    "core-js": "^3.17.3",
     "prop-types": "^15.7.2",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-app-polyfill": "2.0.0",
     "react-content-loader": "^6.0.3",
     "react-dev-utils": "11.0.4",
@@ -37,7 +39,6 @@
     "@babel/polyfill": "7.12.1",
     "@babel/preset-env": "7.15.6",
     "@babel/preset-react": "7.14.5",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@webpack-cli/serve": "1.5.2",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.2",
